--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@
             (project) => `
           <div class="project">
             <div class="pico"><img src="${project.image}" style="max-width: 64px;" /></div>
-            <div class="pdesc"><a href="${project.url}">${project.name}</a> ${project.description}</div>
+            <div class="pdesc"><a href="${project.url}" target="_blank" rel="noopener noreferrer">${project.name}</a> ${project.description}</div>
             <div class="pend"></div>
           </div>
         `
