Refactor UMass Amherst Web Ring section: update logo source, adjust footer placement, and enhance button styling for improved visibility and responsiveness

--- a/index.html
+++ b/index.html
@@ -653,6 +653,28 @@
       }
     </script>
 
+        <!-- UMass Amherst Web Ring -->
+    <div id="umass-webring" class="umass-webring">
+      <div class="webring-container">
+        <a id="webring-prev" href="#" class="webring-link webring-prev" style="display: none;">
+          ← Prev
+        </a>
+        <div class="webring-info">
+          <a href="https://umaring.mkr.cx/" target="_blank" rel="noopener noreferrer" class="webring-logo" title="UMass Amherst Web Ring">
+            <img 
+              src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Umass_textlogo.png" 
+              alt="UMass Amherst Web Ring" 
+              class="webring-button"
+              loading="lazy"
+            />
+          </a>
+        </div>
+        <a id="webring-next" href="#" class="webring-link webring-next" style="display: none;">
+          Next →
+        </a>
+      </div>
+    </div>
+
     <footer
       id="footer"
       style="
@@ -665,26 +687,5 @@
         transition: color 0.3s ease, border-color 0.3s ease;
       "
     ></footer>
-
-    <!-- UMass Amherst Web Ring -->
-    <div id="umass-webring" class="umass-webring">
-      <div class="webring-container">
-        <a id="webring-prev" href="#" class="webring-link webring-prev" style="display: none;">
-          ← Prev
-        </a>
-        <div class="webring-info">
-          <a href="https://umaring.mkr.cx/" target="_blank" rel="noopener noreferrer" class="webring-logo">
-            <img 
-              src="https://umaring.mkr.cx/button.png" 
-              alt="UMass Amherst Web Ring" 
-              class="webring-button"
-            />
-          </a>
-        </div>
-        <a id="webring-next" href="#" class="webring-link webring-next" style="display: none;">
-          Next →
-        </a>
-      </div>
-    </div>
   </body>
 </html>
