Update UMass Amherst Web Ring logo source and refine button styles for better aesthetics and performance

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
         <div class="webring-info">
           <a href="https://umaring.mkr.cx/" target="_blank" rel="noopener noreferrer" class="webring-logo" title="UMass Amherst Web Ring">
             <img 
-              src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Umass_textlogo.png" 
+              src="https://raw.githubusercontent.com/Deva-1903/umaring/main/umass.png" 
               alt="UMass Amherst Web Ring" 
               class="webring-button"
               loading="lazy"
