Update umaring to use umaring.github.io

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
   <!-- UMass Amherst Web Ring Integration -->
   <script type="text/javascript">
     const WEBRING_USERNAME = 'devaanand19';
-    const WEBRING_API_URL = `https://umaring.mkr.cx/${WEBRING_USERNAME}`;
+    const WEBRING_API_URL = `https://umaring.github.io/${WEBRING_USERNAME}.json`;
 
     async function loadWebring() {
       // Skip if username is not set
